--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Auth Test</title>
-    </head>
-    <body>
-        <main>
 
-            <div id="oauth"></div>
+<head>
+  <title>Auth Test</title>
+</head>
 
-        </main>
+<body>
+  <main>
 
-        <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
+    <div id="oauth"></div>
 
-        <script>
+  </main>
 
-          let googleURL = "https://accounts.google.com/o/oauth2/v2/auth";
+  <script src="http://code.jquery.com/jquery-3.3.1.js"></script>
 
-          let options = {
-            client_id:'YOUR-GOOGLE-CLIENT-ID',
-            redirect_uri: 'YOUR-SERVER-URL/oauth',
-            scope: 'email openid profile',
-            prompt: 'consent',
-            response_type: 'code'
-          };
+  <script>
 
-          let QueryString = Object.keys(options).map( (key,i) => {
-            return `${key}=` + encodeURIComponent(options[key]);
-          }).join("&");
+    let googleURL = "https://accounts.google.com/o/oauth2/v2/auth";
 
-          let authURL = `${googleURL}?${QueryString}`;
-
-          $('#oauth').append(`<a href="${authURL}">Login With Google</a>`);
-
-        </script>
+    let options = {
+      client_id: 'YOUR-GOOGLE-CLIENT-ID',
+      redirect_uri: 'YOUR-SERVER-URL/oauth',
+      scope: 'email openid profile',
+      prompt: 'consent',
+      response_type: 'code'
+    };
+    <a href id="LoginWithAmazon">
+      <img border="0" alt="Login with Amazon"
+        src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
+        width="156" height="32" />
+    </a>
 
 
-    </body>
+    let QueryString = Object.keys(options).map((key, i) => {
+      return `${key}=` + encodeURIComponent(options[key]);
+    }).join("&");
+
+    let authURL = `${googleURL}?${QueryString}`;
+
+    $('#oauth').append(`<a href="${authURL}">Login With Google</a>`);
+
+  </script>
+
+
+</body>
+
 </html>
