--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,14 @@
 
     let authURL = `${googleURL}?${QueryString}`;
 
-    $('#oauth').append(`<a href="${authURL}">Login With Google</a>`);
+    $('#LoginWithAmazon').append(`<a href="${authURL}">Login With Google</a>`);
 
   </script>
     
     <a href id="LoginWithAmazon">
         <img border="0" alt="Login with Amazon"
-          src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
+          src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92.png"
+          <!--pressed button url  https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92_pressed.png -->
           width="156" height="32" />
       </a>
 
