more copy paste

--- a/public/index.html
+++ b/public/index.html
@@ -36,27 +36,34 @@
     $('#LoginWithAmazon').append(`<a href="${authURL}">Login With Google</a>`);
 
   </script>
-    
-    <a href id="LoginWithAmazon">
-        <img border="0" alt="Login with Amazon"
-          src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92.png"
-          />
-          <!--pressed button url  https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92_pressed.png -->
-      </a>
+
+  <a href id="LoginWithAmazon">
+    <img border="0" alt="Login with Amazon"
+      src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92.png" />
+    <!--pressed button url  https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92_pressed.png -->
+  </a>
+  <script type="text/javascript">
+    document.getElementById('LoginWithAmazon').onclick = function () {
+      options = { scope: 'profile' };
+      amazon.Login.authorize(options,
+        'https://www.example.com/handle_login.php');
+      return false;
+    };
+  </script>
 
 </body>
 <div id="amazon-root"></div>
- <script type="text/javascript">
+<script type="text/javascript">
 
-    window.onAmazonLoginReady = function() {
-      amazon.Login.setClientId('YOUR-CLIENT-ID');
-    };
-    (function(d) {
-      var a = d.createElement('script'); a.type = 'text/javascript';
-      a.async = true; a.id = 'amazon-login-sdk';
-      a.src = 'https://assets.loginwithamazon.com/sdk/na/login1.js';
-      d.getElementById('amazon-root').appendChild(a);
-    })(document);
+  window.onAmazonLoginReady = function () {
+    amazon.Login.setClientId('YOUR-CLIENT-ID');
+  };
+  (function (d) {
+    var a = d.createElement('script'); a.type = 'text/javascript';
+    a.async = true; a.id = 'amazon-login-sdk';
+    a.src = 'https://assets.loginwithamazon.com/sdk/na/login1.js';
+    d.getElementById('amazon-root').appendChild(a);
+  })(document);
 
 </script>
 
