maybe unbroke it?

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
       response_type: 'code'
     };
 
+
+
     let QueryString = Object.keys(options).map((key, i) => {
       return `${key}=` + encodeURIComponent(options[key]);
     }).join("&");
@@ -37,17 +39,17 @@
   </script>
 
   <a href id="LoginWithAmazon">
-    <img border="0" alt="Login with Amazon"
+    <img alt="Login with Amazon"
       src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92.png" />
     <!--pressed button url  https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_202x92_pressed.png -->
   </a>
   <script type="text/javascript">
     document.getElementById('LoginWithAmazon').onclick = function () {
-      options = { 
+      options = {
         scope: 'profile',
-        client_id:'amzn1.application-oa2-client.a72e393376734e2e9c43d9896167e43d',
-        redirect_uri:'https://star-blazing-auth.herokuapp.com/amzOAuth'
- };
+        client_id: 'amzn1.application-oa2-client.a72e393376734e2e9c43d9896167e43d',
+        redirect_uri: 'https://star-blazing-auth.herokuapp.com/amzOAuth'
+      };
       amazon.Login.authorize(options,
         'https://star-blazing-fe.herokuapp.com/');
       return false;
